# Flos-Stella-Engine

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  compileProject.bat  compileShaders.bat  complileProject.bat  config.ini  first_app.hpp  lve_window.cpp  lve_window.hpp  main.cpp  read.md
assets/scripts/: A.cpp  A.hpp  B.cpp  B.hpp  C.cpp  C.hpp  test.cpp  test.hpp
assets/shaders/: debug.glsl  simple_shader.glsl  simple_shader.vert.spv
include/: FS.app.hpp  FS.buffer.hpp  FS.camera.hpp  FS.descriptors.hpp  FS.device.hpp  FS.frameInfo.hpp  FS.model.hpp  FS.pipeline.hpp  FS.renderPassManager.hpp  FS.renderer.hpp  FS.shaderManager.hpp  FS.swapChain.hpp  FS.window.hpp  first_app.hpp  fs.app.hpp  fs.buffer.hpp  fs.camera.hpp  fs.descriptors.hpp  fs.device.hpp  fs.frameInfo.hpp  fs.logger.hpp  fs.model.hpp  fs.pipeline.hpp  fs.renderPassManager.hpp  fs.renderer.hpp  fs.shaderCompiler.hpp  fs.shaderManager.hpp  fs.swapChain.hpp  fs.utils.hpp  fs.window.hpp  keyboard_movement_controller.hpp  lve_buffer.hpp  lve_camera.hpp  lve_descriptors.hpp  lve_device.hpp  lve_frame_info.hpp  lve_game_object.hpp  lve_model.hpp  lve_pipeline.hpp  lve_renderPassManager.hpp  (+6 more)
include/ECS/: FS.componentArray.hpp  FS.componentManager.hpp  FS.coordinator.hpp  FS.entityManager.hpp  FS.types.hpp  componentArray.hpp  componentManager.hpp  coordinator.hpp  entityManager.hpp  fs.componentArray.hpp  fs.componentManager.hpp  fs.coordinator.hpp  fs.entityManager.hpp  types.hpp
include/ECS/components/: FS.component.mesh.hpp  FS.component.pointLight.hpp  FS.component.shader.hpp  FS.component.transform.hpp  FS.components.hpp  component.model.hpp  component.pointLight.hpp  component.shader.hpp  components.hpp  fs.component.active.hpp  fs.component.mesh.hpp  fs.component.pointLight.hpp  fs.component.script.hpp  fs.component.shader.hpp  fs.component.transform.hpp  fs.components.hpp
include/compilers/: fs.compilerBase.hpp  fs.compilerManager.hpp  fs.dllCompiler.hpp  fs.shaderCompiler.hpp
include/gameScripts/: fs.engineApi.hpp  fs.interface.engineApi.hpp  fs.scriptComponentRegistry.hpp  fs.scriptLoader.hpp  fs.scriptManager.hpp
include/systems/: point_light_system.hpp
include/systems/componentSystems/: FS.pointLightSystem.hpp  fs.pointLightSystem.hpp  pointLightSystem.hpp
include/systems/renderSystems/: FS.meshRenderSystem.hpp  fs.meshRenderSystem.hpp  simple_render_system.hpp
shaders/: point_light.frag  point_light.frag.spv  point_light.vert  point_light.vert.spv  simple_shader.frag  simple_shader.frag.spv  simple_shader.vert  simple_shader.vert.spv
src/: FS.app.cpp  FS.buffer.cpp  FS.camera.cpp  FS.descriptors.cpp  FS.device.cpp  FS.model.cpp  FS.pipeline.cpp  FS.renderPassManager.cpp  FS.renderer.cpp  FS.shaderManager.cpp  FS.swapChain.cpp  FS.window.cpp  first_app.cpp  fs.app.cpp  fs.buffer.cpp  fs.camera.cpp  fs.descriptors.cpp  fs.device.cpp  fs.logger.cpp  fs.model.cpp  fs.pipeline.cpp  fs.renderPassManager.cpp  fs.renderer.cpp  fs.shaderCompiler.cpp  fs.shaderManager.cpp  fs.swapChain.cpp  fs.window.cpp  keyboard_movement_controller.cpp  lve_buffer.cpp  lve_camera.cpp  lve_descriptors.cpp  lve_device.cpp  lve_game_object.cpp  lve_model.cpp  lve_pipeline.cpp  lve_renderPassManager.cpp  lve_renderer.cpp  lve_swap_chain.cpp  lve_window.cpp  main.cpp  (+2 more)
src/ECS/: FS.coordinator.cpp  FS.entityManager.cpp  coordinator.cpp  entityManager.cpp  fs.coordinator.cpp  fs.entityManager.cpp
src/compilers/: fs.compilerBase.cpp  fs.compilerManager.cpp  fs.dllCompiler.cpp  fs.shaderCompiler.cpp
src/gameScripts/: fs.engineApi.cpp  fs.scriptLoader.cpp  fs.scriptManager.cpp
src/systems/: point_light_system.cpp  simple_render_system.cpp
src/systems/componentSystems/: FS.pointLightSystem.cpp  fs.pointLightSystem.cpp  pointLightSystem.cpp
src/systems/renderSystems/: FS.meshRenderSystem.cpp  fs.meshRenderSystem.cpp  simple_render_system.cpp
